B&L QA/objects/Sample_Request__c.object
<CustomObject>
    <description>Alows the TM to submit requests for samples to be sent to the contact or account. 
Originally created for ECS team. Now changed and used by EMEA SU.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used by EMEA SU.</description>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sample Requests</relationshipLabel>
        <relationshipName>Sample_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <description>Updated as part of the approval process, to the name of the manager who approved or rejected the request. Used by EMEA SU.</description>
        <label>Approved/Rejected By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sample Requests</relationshipLabel>
        <relationshipName>Sample_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Courier__c</fullName>
        <description>The TM&apos;s preferred courier for this sample delivery. Used by EMEA SU.</description>
        <label>Courier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bring Parcel</fullName>
                </value>
                <value>
                    <fullName>DHL</fullName>
                </value>
                <value>
                    <fullName>ParcelForce</fullName>
                </value>
                <value>
                    <fullName>Polarspeed</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Svc_Email_Address__c</fullName>
        <defaultValue>&quot;crc_sales_support@bausch.com&quot;</defaultValue>
        <label>Customer Svc Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Date_Request_Fulfilled__c</fullName>
        <label>Date Request Fulfilled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Request_Submitted__c</fullName>
        <label>Date Request Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliver_to_the_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the sample/s should be delivered directly to the customer. If unchecked the default is for samples to be shipped to the Sales Rep. Used by EMEA SU.</description>
        <label>Deliver to the Customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_by__c</fullName>
        <description>Date the delivery needs to have been made. Used by EMEA SU.</description>
        <inlineHelpText>Enter the date that you need the samples delivered by.</inlineHelpText>
        <label>Delivery by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                    <default>true</default>
                    <label>One Time</label>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Notes__c</fullName>
        <label>Request Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request Submitted</fullName>
                </value>
                <value>
                    <fullName>Request Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Request Issue</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
        <label>Requested By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <formula>Account__r.ShippingStreet &amp; &quot;, &quot; &amp;  Account__r.ShippingCity &amp; &quot;, &quot; &amp;  Account__r.ShippingState &amp; &quot;  &quot; &amp;  Account__r.ShippingPostalCode</formula>
        <label>Ship To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_ID__c</fullName>
        <description>Ship To ID of the Account. Used by EMEA SU.</description>
        <formula>Account__r.Ship_To_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers the workflow that populates the appropriate CS email address and sends the request email. Used by EMEA SU.</description>
        <inlineHelpText>Only check this box once you have added all of the required Sample Products to the request</inlineHelpText>
        <label>Submit to Customer Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The personal account of the Territory Manager who is placing the sample request order and to whom the order should be shipped. Used by EMEA SU.</description>
        <inlineHelpText>Account of the Territory Manager placing the sample request order.</inlineHelpText>
        <label>Territory Manager Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sample Requests (Delivery Account)</relationshipLabel>
        <relationshipName>Sample_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sample Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Date_Request_Submitted__c</columns>
        <columns>Date_Request_Fulfilled__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Frequency__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Customer_Service</fullName>
        <columns>Requested_By__c</columns>
        <columns>Date_Request_Submitted__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Frequency__c</columns>
        <columns>Request_Status__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Request Submitted</value>
        </filters>
        <label>Customer Service</label>
        <queue>NALCustomerService</queue>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Sample Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Requests</pluralLabel>
    <recordTypes>
        <fullName>EMEA_SU_Sample_Request</fullName>
        <active>true</active>
        <description>Product Sample Request form for EMEA Surgical</description>
        <label>EMEA SU Sample Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>